[workspace.package]
edition = "2021"
author = "meltedsoysource"
description = "library to implement echo state network"

[workspace]
resolver = "2"
members = [
    "model"
, "models"]

[workspace.dependencies]
ndarray = "0.16.1"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
ndarray-stats = "0.6.0"
ndarray-rand = "0.15.0"
